Fixed populateRatings bug.